infra/networking/traefik/external-services/haas-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: haas
  namespace: traefik
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - "haas.mcmn.me"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: haas-external
          port: 8123
          weight: 1
---
apiVersion: v1
kind: Service
metadata:
  name: haas-external
  namespace: traefik
  annotations:
    ignore-check.kube-linter.io/dangling-service: "Intentional headless service pointing to external IP via manual Endpoints"
spec:
  ports:
    - port: 8123
      targetPort: 8123
      name: http
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: haas-external-slice
  namespace: traefik
  labels:
    kubernetes.io/service-name: haas-external  # links slice to service
    endpointslice.kubernetes.io/managed-by: manual  # indicates that the endpoint slice is manually managed
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
addressType: IPv4
ports:
  - port: 8123
    protocol: TCP
    name: http
endpoints:
  - addresses:
      - "10.10.1.47"
    conditions:
      ready: true
--- #External DNS specific for exposing argo to CF tunnel. external-dns does not support annotating gateway API + HTTP Route
apiVersion: externaldns.k8s.io/v1alpha1
kind: DNSEndpoint
metadata:
  name: haas-tunnel
  namespace: traefik
  labels:
    external-dns: "true"
spec:
  endpoints:
    - dnsName: haas.mcmn.me
      recordType: CNAME
      targets:
        - 37ab5ca6-9491-4bc3-9505-75be85d6e554.cfargotunnel.com
