infra/networking/traefik/external-services/stirling-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stirling
  namespace: traefik
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - "stirling.mcmn.me"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: stirling-external
          port: 8086
          weight: 1
---
apiVersion: v1
kind: Service
metadata:
  name: stirling-external
  namespace: traefik
  annotations:
    ignore-check.kube-linter.io/dangling-service: "Intentional headless service pointing to external IP via manual Endpoints"
spec:
  ports:
    - port: 8086
      targetPort: 8086
      name: http
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: stirling-external-slice
  namespace: traefik
  labels:
    kubernetes.io/service-name: stirling-external  # links slice to service
    endpointslice.kubernetes.io/managed-by: manual  # indicates that the endpoint slice is manually managed
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
addressType: IPv4
ports:
  - port: 8086
    protocol: TCP
    name: http
endpoints:
  - addresses:
      - "10.10.1.45"
    conditions:
      ready: true
